--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/cli": "^4.0.6",
+    "aos": "^2.3.4",
+    "dotenv": "^16.4.7",
     "tailwindcss": "^4.0.6"
   }
 }
